# go-time

./: .env.template  .gitignore  pyproject.toml  requirements.txt
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-08-17-google-maps-integration/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-17-google-maps-integration/sub-specs/: technical-spec.md
.claude/: settings.local.json
maps/: __init__.py  client.py  config.py  directions.py  geocoding.py  monitoring.py
tests/: conftest.py  test_package_structure.py
