[tool.poetry]
name = "go-time"
version = "0.1.0"
description = "Smart commute monitoring app that watches Google Maps travel times and notifies when target durations are reached"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "maps"}]

[tool.poetry.dependencies]
python = "^3.11"
googlemaps = "^4.10.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
pylint = "^3.0.0"
mypy = "^1.5.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pylint.messages_control]
disable = ["missing-docstring", "too-few-public-methods"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"